--- a/style.css
+++ b/style.css
@@ -8,6 +8,23 @@
 }
 
 body {
+  display: flex;
+  flex-direction: column; 
+  min-height: 100vh;
+}
+
+main {
+  flex: 1;
+}
+
+footer {
+
+  background-color: #2c3e50;
+  padding: 20px 0;
+  text-align: center;
+  color: white;
+}
+body {
   font-family: 'Segoe UI', sans-serif;
   margin: 0;
   padding: 0;
